--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
+  - 7.3
+  - 8.0
+  - 8.1
 
 services:
-  - redis-server
+  - redis
 
 before_script:
   - composer self-update
