--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,18 @@
 	],
 	"license": "MIT",
 	"require": {
-		"php": ">=5.3.0",
+		"php": ">=7.3",
+        "ext-posix": "*",
 		"zetacomponents/console-tools" : ">=1.6",
 		"zetacomponents/base" : ">=1.8",
         "kamisama/resque-status": ">=0.0.1",
         "kamisama/php-resque-ex": ">=1.2.5",
         "kamisama/php-resque-ex-scheduler": "~1.2.2"
-	},
+    },
     "require-dev": {
-        "phpunit/phpunit": "~3.7.0",
-        "satooshi/php-coveralls": "dev-master",
-        "mikey179/vfsStream": ">=1.2.0"
+        "phpunit/phpunit": "^9.5",
+        "mikey179/vfsstream": "^1.6.10",
+        "php-coveralls/php-coveralls": "^2.3"
     },
 	"suggest": {
 		"chrisboulton/php-resque" : "PHP port of resque (Workers and Queueing)"
