--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,9 @@ indent_size = 4
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
+
+[*.yml]
+indent_size = 2
+
+[{composer.json,cypress.json,package.json}]
+indent_size = 2
