--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fresque/fresque",
+  "name": "freelancehunt/fresque",
   "description": "A command line tool to manage your php-resque workers",
   "keywords": [
     "php-resque",
@@ -10,6 +10,14 @@
   "homepage": "http://kamisama.github.com/Fresque/",
   "authors": [
     {
+      "name": "Oleg Topchiy",
+      "email": "edge@freelancehunt.com"
+    },
+    {
+      "name": "Yaroslav Molchan",
+      "email": "yaroslav@freelancehunt.com"
+    },
+    {
       "name": "Wan Chen",
       "email": "kami@kamisama.me",
       "homepage": "http://www.kamisama.me"
@@ -17,7 +25,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "ext-posix": "*",
     "zetacomponents/console-tools": ">=1.6",
     "zetacomponents/base": ">=1.8",
@@ -34,9 +42,9 @@
     "chrisboulton/php-resque": "PHP port of resque (Workers and Queueing)"
   },
   "support": {
-    "email": "kami@kamisama.me",
-    "issues": "https://github.com/kamisama/Fresque/issues",
-    "source": "https://github.com/kamisama/Fresque"
+    "email": "dev@freelancehunt.com",
+    "issues": "https://github.com/freelancehunt/fresque/issues",
+    "source": "https://github.com/freelancehunt/fresque"
   },
   "bin": [
     "fresque"
