Remove known PHP 8.1 deprecations and PHPUnit 9.5 deprecations except one

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
   "require": {
     "php": ">=8.1",
     "ext-posix": "*",
-    "zetacomponents/console-tools": ">=1.6",
-    "zetacomponents/base": ">=1.8",
+    "zetacomponents/console-tools": "^1.7",
+    "zetacomponents/base": "^1.9",
     "kamisama/resque-status": ">=0.0.1",
     "kamisama/php-resque-ex": ">=1.2.5",
     "kamisama/php-resque-ex-scheduler": "~1.2.2"
