--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: "ramsey/composer-install@v2"
-        with:
-          composer-options: "--ignore-platform-reqs --optimize-autoloader"
+      - name: Build the stack
+        run: docker-compose up -d
 
-      - name: PHPUnit Tests
-        uses: php-actions/phpunit@v3
-        with:
-          version: 9.5.20
-          configuration: phpunit.xml.dist
-          php_version: 8.1
-          php_extensions: posix
+      - name: Install dependencies
+        run: docker-compose run php composer install
+
+      - name: Run PHPUnit Tests
+        run: docker-compose run php vendor/bin/phpunit
