--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "cli",
     "redis"
   ],
-  "homepage": "http://kamisama.github.com/Fresque/",
   "authors": [
     {
       "name": "Oleg Topchiy",
@@ -27,9 +26,10 @@
   "require": {
     "php": ">=8.1",
     "ext-posix": "*",
+    "ext-pcntl": "*",
+    "ext-redis": "*",
     "zetacomponents/console-tools": "^1.7",
     "zetacomponents/base": "^1.9",
-    "kamisama/resque-status": ">=0.0.1",
     "kamisama/php-resque-ex": ">=1.2.5",
     "kamisama/php-resque-ex-scheduler": "~1.2.2"
   },
