--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,9 +7,9 @@
     <exclude>
       <directory suffix=".php">./vendor/</directory>
       <directory suffix=".php">./tests</directory>
-      <file>./lib/init.php</file>
-      <file>./lib/DialogMenuValidator.php</file>
-      <file>./lib/SendSignalCommandOptions.php</file>
+      <file>./src/init.php</file>
+      <file>./src/Fresque/DialogMenuValidator.php</file>
+      <file>./src/Fresque/SendSignalCommandOptions.php</file>
     </exclude>
     <report>
       <clover outputFile="./build/logs/clover.xml"/>
