--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "freelancehunt/fresque",
+  "name": "themy3/fresque",
   "description": "A command line tool to manage your php-resque workers",
   "keywords": [
     "php-resque",
@@ -25,9 +25,6 @@
   "license": "MIT",
   "require": {
     "php": ">=8.1",
-    "ext-posix": "*",
-    "ext-pcntl": "*",
-    "ext-redis": "*",
     "zetacomponents/console-tools": "^1.7",
     "zetacomponents/base": "^1.9",
     "kamisama/php-resque-ex": ">=1.2.5",
