--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
     }
   ],
   "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Freelancehunt\\": "src/"
+    }
+  },
   "require": {
     "php": ">=8.1",
     "zetacomponents/console-tools": "^1.7",
