--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,15 @@
       "Freelancehunt\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": ">=8.1",
     "zetacomponents/console-tools": "^1.7",
-    "zetacomponents/base": "^1.9",
-    "kamisama/php-resque-ex": ">=1.2.5",
-    "kamisama/php-resque-ex-scheduler": "~1.2.2"
+    "zetacomponents/base": "^1.9"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
@@ -49,6 +52,7 @@
     "source": "https://github.com/freelancehunt/fresque"
   },
   "bin": [
-    "fresque"
+    "bin/resque",
+    "bin/fresque"
   ]
 }
