--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "themy3/fresque",
+  "name": "freelancehunt/fresque",
   "description": "A command line tool to manage your php-resque workers",
   "keywords": [
     "php-resque",
@@ -36,7 +36,8 @@
   "require": {
     "php": ">=8.1",
     "zetacomponents/console-tools": "^1.7",
-    "zetacomponents/base": "^1.9"
+    "zetacomponents/base": "^1.9",
+    "ext-pcntl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
