--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,21 @@
     }
   ],
   "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Freelancehunt\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": ">=8.1",
-    "ext-posix": "*",
-    "ext-pcntl": "*",
-    "ext-redis": "*",
     "zetacomponents/console-tools": "^1.7",
     "zetacomponents/base": "^1.9",
-    "kamisama/php-resque-ex": ">=1.2.5",
-    "kamisama/php-resque-ex-scheduler": "~1.2.2"
+    "ext-pcntl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
@@ -47,6 +53,7 @@
     "source": "https://github.com/freelancehunt/fresque"
   },
   "bin": [
-    "fresque"
+    "bin/resque",
+    "bin/fresque"
   ]
 }
