Cleanup and update readme

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,5 @@ jobs:
 
       - name: Run PHPUnit Tests
         run: docker-compose exec -T php vendor/bin/phpunit
+
+      - uses: codecov/codecov-action@v3
