--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Run PHPUnit Tests
         run: docker-compose exec -T php vendor/bin/phpunit
 
-      - uses: codecov/codecov-action@v3
+      - name: Upload coverage results to Coveralls
+        run: docker-compose exec -e COVERALLS_REPO_TOKEN="${{ secrets.COVERALLS_REPO_TOKEN }}" -T php vendor/bin/php-coveralls -v
