--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     working_dir: /app
     volumes:
       - "./:/app:cached"
+    environment:
+      - XDEBUG_MODE=coverage
 
   redis:
     image: "redis:alpine"
